# envhist

./: .gitignore  Cargo.toml  README.md  SPEC.md
cli/: Cargo.toml
cli/src/: daemon_client.rs  main.rs
cli/src/commands/: diff.rs  init.rs  log.rs  mod.rs  snapshot.rs  status.rs
cli/src/shell/: zsh.rs
core/: Cargo.toml
core/src/: config.rs  differ.rs  lib.rs  session.rs  storage.rs
daemon/: Cargo.toml
daemon/src/: lib.rs  main.rs  server.rs
