[package]
name = "envhist"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "envhist"
path = "src/main.rs"

[dependencies]
envhist-core = { path = "../core" }
envhist-daemon = { path = "../daemon" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
dirs = { workspace = true }
chrono = { workspace = true }
colored = { workspace = true }
uuid = { workspace = true }

